--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </div>
           </div>
           <div class="particle">
-            <img src="img/paricle1.png" alt="particle1">
+            <img src="img/particle1.png" alt="particle1">
           </div>
         </div>
         <div class="line"></div>
@@ -332,7 +332,7 @@
             </div>
           </div>
           <div class="particle">
-            <img src="img/paricle1.png" alt="particle1">
+            <img src="img/particle1.png" alt="particle1">
           </div>
         </div>
         <h2 class="tit">about</h2>
